# ToDoList

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test_setup.py
alembic/: env.py
alembic/versions/: 78eb301a6786_initial_tables.py
app/api/schemas/requests/: project_requests.py
app/api/schemas/requests/app/api/schemas/requests/: task_requests.py
app/api/schemas/requests/app/api/schemas/requests/app/api/schemas/responses/: project_responses.py
postman/: README.md  todolist-collection.json  todolist-environment.json
src/todo_list/: main.py
src/todo_list/infrastructure/database/: session.py
src/todo_list/infrastructure/database/app/db/app/models/: project.py
src/todo_list/infrastructure/database/app/db/app/models/app/models/: main.py  task.py
src/todo_list/infrastructure/database/app/db/app/models/app/models/app/db/: session.py
src/todo_list/infrastructure/database/models/: project.py  task.py
src/todo_list/infrastructure/database/models/src/todo_list/infrastructure/database/models/: task.py
src/todo_list/infrastructure/database/models/src/todo_list/infrastructure/database/models/src/todo_list/interfaces/repositories/: project_repo.py
src/todo_list/interfaces/repositories/: project_repo.py  task_repo.py
src/todolist/: main.py
src/todolist/app/cli/: console.py
src/todolist/config/: settings.py
src/todolist/core/: exceptions.py  project.py  task.py
src/todolist/core/tests/: test_project.py
src/todolist/storage/: memory_storage.py
(+4 files in other folders)
