[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "A simple ToDo List application with Python OOP"
authors = ["Sanaz Aparviz <sanazandsani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
todolist = "todolist.main:main"